# CrashRptLite

./: CMakeLists.txt  README.md
demos/ConsoleDemo/: CMakeLists.txt  ConsoleDemo.cpp
demos/MFCDemo/: CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  MFCDemo.cpp  MFCDemo.rc  MFCDemoDoc.cpp  MFCDemoDoc.h  MFCDemoView.cpp  MFCDemoView.h  MainFrm.cpp  MainFrm.h  stdafx.h
exe/: AssyncNotification.h  CMakeLists.txt  CrashInfoReader.cpp  CrashInfoReader.h  CrashReporter.cpp  Resource.rc  Utility.cpp  resource.h
lib/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  CritSec.cpp  CritSec.h  Prefastdef.h  SharedMem.cpp  SharedMem.h  StdAfx.h  Utility.cpp  Utility.h  WinCrashpad.def  main.cpp
lib/include/WinCrashpad/: WinCrashpad.h
vcpkg_port/wincrashpad/: portfile.cmake  vcpkg.json
